Fix handling Inherit Alpha/Lock Alpha by filters

1) When applying, filters should treat "Lock Alpha" instead of
   "Inherit Alpha".

2) Filter masks should not handle parent layer's alpha locks
   at all

BUG:397364